--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 </head>
 <body>
   <section class="section">
-    <h3>ИЭТР для плагина синтора с машинным обучением</h3>
+    <h3>ИЭТР для плагина синтезатора с машинным обучением</h3>
 
     <div>
       <h4>Регламентные работы</h4>
