--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 </head>
 <body>
   <section class="section">
-    <h3>ИЭТР для плагина синтезатора с машинным обучением</h3>
+    <h3>ИЭТР для системы генерации звуков с машинным обучением, реализованной в виде плагина синтезатора</h3>
 
     <div>
       <h4>Регламентные работы</h4>
@@ -314,14 +314,14 @@
 
   <script>
     const maintenanceTasks = [
-      { title: "Проверка параметров ПО", description: "Пользователь выставляет необходимые параметры в ПО перед каждым использованием. Периодичность: при каждом запуске." },
-      { title: "Проверка на обновление ПО", description: "Зайти на сайт ПО, проверить наличие обновлений и установить их, если они доступны. Периодичность: 1 раз в неделю." },
-      { title: "Проверка на обновление модели", description: "Запустить в ПО проверку наличия обновленной модели и установить ее при необходимости. Периодичность: 2 раза в месяц." },
+      { title: "Проверка параметров ПО", description: "Пользователь выставляет необходимые параметры в ПО, для создание того или иного звучания, или выбирает готовый/генерирует новый пресет в таком случае параметры выставляются автоматически, перед каждым использованием. Периодичность: при каждом запуске." },
+      { title: "Проверка на обновление ПО", description: "Зайти на сайт ПО: <a href='https://example.com/docs'>ссылка</a>, проверить наличие обновлений и установить их, если они доступны нажать на кнопку 'Загрузить' и выполнить указанные инструкции в установщике. Периодичность: 1 раз в неделю." },
+      { title: "Проверка на обновление модели", description: "Запустить в ПО проверку наличия обновленной модели, нажав Меню->Настройки->Проверить наличие обновлений, и в случае, если обновления нашлись нажать кпопку 'Установить обновления'. Периодичность: 2 раза в месяц." },
       { title: "Мониторинг результатов", description: "Сбор данных о работе ПО, анализ результатов и обращение в техподдержку при неполадках. Периодичность: 1 раз в месяц." }
     ];
 
     const information = [
-      { title: "Общие рекомендации по использованию", description: "Убедитесь, что параметры настроены перед запуском. Используйте пресеты для быстрой настройки. Регулярно проверяйте обновления." },
+      { title: "Общие рекомендации по использованию ПО", description: "Убедитесь, что параметры настроены перед запуском. Используйте пресеты для быстрой настройки. Регулярно проверяйте обновления." },
       { title: "Оптимизация производительности", description: "Уменьшите размер буфера в настройках, закройте фоновые приложения, используйте ASIO-драйверы для звуковой карты." },
       { title: "Дополнительные ресурсы", description: "Официальная документация: <a href='https://example.com/docs'>ссылка</a>. Форумы: <a href='https://example.com/forum'>форум</a>." },
       { title: "Аппаратные требования", description: ["ОС: Windows 10 / macOS 11+", "Процессор: Intel Core i5 / AMD Ryzen 5", "ОЗУ: 8 ГБ (рекомендуется 16 ГБ)", "Жёсткий диск: 2 ГБ свободного места", "Звуковая карта: ASIO-совместимая или встроенная"] },
